tests/ui/generator/yield-in-function.stderr
error[E0627]: yield expression outside of generator literal
  --> $DIR/yield-in-function.rs:3:13
   |
LL | fn main() { yield; }
   |             ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0627`.
