tests/ui/generator/yield-in-function.rs
#![feature(coroutines)]

fn main() { yield; }
//~^ ERROR yield expression outside
